# xsd2xml

./: .flake8  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  release.yml
src/xsd2xml/: __main__.py  xsd2xml_cli.py
test/: camt054.xsd  runner.py  test_public_xsd.py
xsd2xml/: xsd2xml.py  xsd2xml_cli.py
